# LinearLogic

./: .gitignore  LinearLogic.cabal  README.md  TODO.md
src/: LinType.hs  Sigma3.hs
test/: Spec.hs
