cabal-version:      3.0
name:               LinearLogic
version:            0.1.0.0
build-type:         Simple

test-suite LinearLogic-test
    type:             exitcode-stdio-1.0
    main-is:          Spec.hs
    hs-source-dirs:   test, src
    default-language: Haskell2010
    other-modules:
        LinType,
        Sigma3
    build-depends:    
        base,
        mtl,
        containers,
        hspec,
        QuickCheck
    -- This ensures the extensions you need are on
    default-extensions:
        NamedFieldPuns
